--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -23,6 +23,8 @@
     "sobhaAquaCrest": "شوبا أكوا كريست",
     "sobhaCentral": "شوبا سنترال",
     "sobhaAquamont": "شوبا أكوامونت",
+    "sobhaOrbis": "شوبا أوربيس",
+    "sobhaVerde": "شوبا ڤيردي",
     "sobhaHartland2Villas": "فلل شوبا هارتلاند 2",
     "sobhaAlSinniyyahIsland": "جزيرة السينية",
     "aradaMassar3": "مسار",
@@ -99,6 +101,46 @@
       "avgBuy": "تاونهاوس من 1.6 مليون درهم",
       "avgRent": "تاونهاوس من 110 ألف درهم سنوياً",
       "roi": "عائد متوقع 5–7%"
+    },
+    "filters": {
+      "searchAndFilters": "البحث والفلاتر",
+      "price": "السعر",
+      "priceRangeLabel": "نطاق السعر (درهم إماراتي)",
+      "priceRangeValue": "{{value}} درهم",
+      "minPriceLabel": "أقل سعر",
+      "maxPriceLabel": "أعلى سعر",
+      "size": "المساحة",
+      "sizeRangeLabel": "نطاق المساحة (قدم مربع)",
+      "sizeRangeValue": "{{value}} قدم مربع",
+      "minSizeLabel": "أقل مساحة",
+      "maxSizeLabel": "أكبر مساحة",
+      "unitType": "نوع الوحدة",
+      "unitTypeLabel": "نوع العقار",
+      "status": "حالة المشروع",
+      "statusLabel": "حالة التطوير",
+      "bedrooms": "غرف النوم",
+      "bedroomsLabel": "عدد غرف النوم",
+      "unitTypeOptions": {
+        "apartments": "شقق",
+        "villa": "فيلا",
+        "townhouse": "تاونهاوس",
+        "duplex": "دوبلكس",
+        "penthouse": "بنتهاوس",
+        "retail": "محلات تجارية"
+      },
+      "devStatusOptions": {
+        "completed": "جاهز",
+        "presale": "بيع على الخارطة",
+        "underConstruction": "قيد الإنشاء"
+      },
+      "bedroomOptions": {
+        "studio": "استوديو",
+        "one": "غرفة واحدة",
+        "two": "غرفتان",
+        "three": "3 غرف",
+        "four": "4 غرف",
+        "fivePlus": "5 غرف أو أكثر"
+      }
     }
   },
   "homeSlider": {
@@ -153,6 +195,10 @@
         "location": "شارع الشيخ زايد، دبي"
       },
       "aquamont": {
+        "category": "شقق",
+        "location": "دبي، الإمارات"
+      },
+      "orbis": {
         "category": "شقق",
         "location": "دبي، الإمارات"
       },
@@ -313,31 +359,26 @@
   "cta": {
     "whatsapp": "واتساب"
   },
-
   "aboutHero": {
     "description1": "محمد قضماني هو متخصص في الاستثمار العقاري في دبي برؤية واضحة ونهج مهني يجمع بين الابتكار والخبرة والتحليل الدقيق لفرص السوق.",
     "description2": "مسيرته الممتدة بين المقاولات وتطوير الأعمال والاستثمار العقاري مكنته من مساعدة مئات المستثمرين على اتخاذ قرارات شراء ناجحة وبناء محافظ عقارية مربحة.",
-
     "yearsNumber": "18",
     "yearsPlus": "+",
     "labelTop": "سنوات من",
+    "yearsLabel": "سنوات من",
     "line1": "الابتكار",
     "line2": "والخبرة",
     "since": "منذ 2006",
-
     "imageAltDesk": "مشروع عقاري فاخر",
     "imageAltMob": "صورة عقارية للجوال"
   },
-
   "buildingExcellence": {
     "heading": {
       "line1": "قرارات عقارية",
       "line2": "تبني الثروة،",
       "line3": "وليس مجرد عقارات"
     },
-
     "paragraph": "في <strong>شركة محمد قضماني للوساطة العقارية</strong>، نحن لا نبيع الوحدات فقط؛ بل نصمّم استراتيجيات استثمار كاملة. كل توصية تعتمد على معلومات شفافة، وتحليل واقعي للسوق، وخطة واضحة توازن بين تقدير رأس المال، ودخل الإيجار، وإدارة المخاطر. خلال عامين فقط، ساعد فريقنا المستثمرين على إتمام أكثر من 170 مليون درهم من الصفقات، بعوائد تتجاوز 8% سنويًا من خلال اختيار المشاريع المناسبة في الوقت المناسب.",
-
     "stats": [
       {
         "count": "19",
@@ -355,10 +396,8 @@
         "label": "عائدات سنوية مستهدفة ضمن استراتيجيات استثمارية مدروسة."
       }
     ],
-
     "dividerAlt": "خط فاصل زخرفي للقسم"
   },
-
   "aboutBuildingExcellence": {
     "heading": "قرارات عقارية تبني ثروة، لا عقارات فقط",
     "lead": "في محمد قضماني للوساطة العقارية لا نكتفي ببيع الوحدات، بل نصمم استراتيجيات استثمار متكاملة. كل توصية مبنية على معلومات شفافة، وتحليل واقعي للسوق، وخطة واضحة توازن بين نمو رأس المال، ودخل الإيجار، ومستوى المخاطرة. خلال عامين فقط، ساعد فريقنا المستثمرين على إغلاق صفقات تتجاوز 170 مليون درهم بعوائد سنوية تفوق 8% من خلال الدخول في المشاريع الصحيحة في التوقيت الصحيح.",
@@ -377,12 +416,9 @@
       }
     }
   },
-
   "services": {
     "title": "ماذا نفعل من أجل مستثمرينا",
-
-    "intro": "في <span class='brandHighlight'>شركة محمد قضماني للوساطة العقارية</span>، نحن لا نبيع العقارات فقط. بل نقوم بتحليل أهدافك، وضع استراتيجية واضحة، وتنفيذ كل خطوة معك — من اختيار المشروع المناسب وحتى التسليم، التأجير، إعادة البيع، والتأثيث.",
-
+    "intro": "في <span class=\"brandHighlight\">شركة محمد قضماني للوساطة العقارية</span>، نحن لا نبيع العقارات فقط. بل نقوم بتحليل أهدافك، وضع استراتيجية واضحة، وتنفيذ كل خطوة معك — من اختيار المشروع المناسب وحتى التسليم، التأجير، إعادة البيع، والتأثيث.",
     "cards": [
       {
         "title": "الاستشارات الاستثمارية واستراتيجيات البيع على الخارطة",
@@ -412,10 +448,8 @@
         ]
       }
     ],
-
-    "footer": "معنا، تحصل على شريك استثماري طويل الأمد يفهم سوق دبي، يقرأ توجهاته، ويقودك نحو <strong class='highlight'>أفضل النتائج بأقل قدر ممكن من المخاطرة</strong>."
+    "footer": "معنا، تحصل على شريك استثماري طويل الأمد يفهم سوق دبي، يقرأ توجهاته، ويقودك نحو <strong class=\"highlight\">أفضل النتائج بأقل قدر ممكن من المخاطرة</strong>."
   },
-
   "pillars": {
     "vision": {
       "title": "رؤيتنا",
@@ -443,37 +477,30 @@
       }
     }
   },
-
   "journey": {
     "kicker": "مسيرتنا",
     "heading": "من الإنشاءات إلى ريادة الاستثمار العقاري",
-
     "2006": {
       "title": "من الإرث العائلي إلى قطاع الإنشاءات",
       "description": "انطلاقاً من عائلة لها خبرة قوية في المقاولات والعقار، يؤسس محمد شركة البيـرق للمقاولات في دبي ويبدأ بناء سجله الخاص في المشاريع والتنفيذ."
     },
-
     "2013": {
       "title": "التوسع في قطاع التجميل",
       "description": "ينتقل إلى تطوير الأعمال في قطاع التجميل في سوريا، مكتسباً خبرة عملية في بناء العلامات التجارية والإدارة والنمو القائم على العميل."
     },
-
     "2016": {
       "title": "ريادة الأعمال في قطاع المطاعم",
       "description": "يؤسس محمد ويدير عدة مطاعم في سوريا، مما يعزز فهمه للتدفق المالي والإدارة اليومية وإدارة المخاطر في الأسواق التنافسية."
     },
-
     "2023": {
       "title": "تأسيس شركة محمد قضماني للعقارات",
       "description": "بخبرة تمتد لسنوات في البناء وريادة الأعمال، يطلق محمد شركته العقارية في دبي والمتخصصة في الاستثمار العقاري الموجه للعوائد."
     },
-
     "2023_2025": {
       "title": "بناء محافظ استثمارية ناجحة في دبي",
       "description": "خلال عامين فقط، تساعد الشركة المستثمرين في إغلاق أكثر من 170 مليون درهم من الصفقات مع عوائد تزيد عن 8% من خلال الفرص المدروسة والمحافظ الاستثمارية والاهتمام الكامل بعد الشراء."
     }
   },
-
   "aboutServices": {
     "sectionTitle": "ماذا نقدم لمستثمرينا",
     "intro": "في محمد قضماني للوساطة العقارية نقوم بأكثر من مجرد بيع عقارات. نحن نحلل أهدافك، ونصمم استراتيجية واضحة، وننفّذ معك كل خطوة — من اختيار المشروع المناسب وصولاً إلى التسليم، والتأجير، وإعادة البيع، والتأثيث.",
@@ -511,7 +538,6 @@
       "highlight": "أفضل النتائج الممكنة بأقل قدر ممكن من المخاطر"
     }
   },
-
   "aboutBrandPillars": {
     "vision": {
       "title": "رؤيتنا",
@@ -539,7 +565,6 @@
       }
     }
   },
-
   "aboutJourney": {
     "kicker": "رحلتنا",
     "heading": "من عالم البناء إلى ريادة الاستثمار",
@@ -569,6 +594,65 @@
         "title": "بناء محافظ استثمارية للمستثمرين في دبي",
         "description": "خلال عامين فقط، تساعد الشركة المستثمرين على إغلاق صفقات تتجاوز 170 مليون درهم بعوائد استثمارية تفوق 8%، مع التركيز على الفرص الذكية في العقارات قيد الإنشاء، وبناء المحافظ، والخدمات ما بعد الشراء."
       }
+    }
+  },
+  "common": {
+    "clear": "مسح",
+    "from": "من",
+    "to": "إلى"
+  },
+  "developersDashboard": {
+    "empty": {
+      "title": "لا يوجد مطورون مهيؤون",
+      "description": "قم بإضافة بيانات المطورين في developersDetails لاستخدام هذه الصفحة."
+    },
+    "sidebar": {
+      "title": "المطورون",
+      "searchPlaceholder": "ابحث عن مطور...",
+      "searchResultsInfo": "تم العثور على {{count}} مطور",
+      "noResults": "لم يتم العثور على مطورين",
+      "clearSearch": "مسح البحث",
+      "footerCount": "{{visible}} من {{total}} مطورين"
+    },
+    "projects": {
+      "title": "مجموعة المشاريع",
+      "subtitle": "مجموعة مختارة من مشاريع {{developer}} المميزة",
+      "resultsInfo": "{{count}} مشروع من تطوير {{developer}}"
+    },
+    "filters": {
+      "clearAll": "مسح الكل"
+    }
+  },
+  "projects": {
+    "empty": {
+      "title": "لا توجد مشروعات",
+      "subtitle": "جرّب تعديل الفلاتر لعرض المزيد من النتائج",
+      "resetButton": "إعادة تعيين جميع الفلاتر"
+    },
+    "status": {
+      "completed": "جاهز",
+      "presale": "بيع على الخارطة",
+      "underConstruction": "قيد الإنشاء",
+      "announced": "معلن عنه",
+      "onSale": "متاح للبيع",
+      "offPlan": "عقار قيد الإنشاء",
+      "ready": "جاهز",
+      "readyAndOffPlan": "جاهز وقيد الإنشاء",
+      "available": "متاح"
+    },
+    "cards": {
+      "imageFallback": "المشروع",
+      "priceOnRequest": "السعر عند الطلب",
+      "priceFrom": "السعر من",
+      "typeLabel": "النوع",
+      "typeDefault": "شقة",
+      "sizeLabel": "المساحة",
+      "sizeNA": "غير متوفر",
+      "sqft": "قدم مربع",
+      "completionLabel": "تاريخ التسليم",
+      "completionTBA": "يحدد لاحقاً",
+      "viewDetails": "عرض تفاصيل المشروع",
+      "defaultLocation": "دبي"
     }
   }
 }
