until sobha el wood before it

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -25,6 +25,7 @@
     "sobhaAquamont": "شوبا أكوامونت",
     "sobhaOrbis": "شوبا أوربيس",
     "sobhaVerde": "شوبا ڤيردي",
+    "sobhaReserve": "شوبا ريسيرڤ",
     "sobhaHartland2Villas": "فلل شوبا هارتلاند 2",
     "sobhaAlSinniyyahIsland": "جزيرة السينية",
     "aradaMassar3": "مسار",
