--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,9 +24,10 @@
     "sobhaCentral": "Sobha Central",
     "sobhaAquamont": "Sobha Aquamont",
     "sobhaOrbis": "Sobha Orbis",
-    "sobhaVerde": "Sobha Verde",
     "sobhaHartland2Villas": "Sobha Hartland Villas",
     "sobhaAlSinniyyahIsland": "Al Sinniyyah Island",
+    "sobhaVerde": "Sobha Verde",
+    "sobhaReserve": "Sobha Reserve",
     "aradaMassar3": "Masaar",
     "damacIslands2": "Damac Islands 2",
     "luminaAlta": "Lumena Alta",
