--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -26,6 +26,7 @@
     "sobhaOrbis": "شوبا أوربيس",
     "sobhaVerde": "شوبا ڤيردي",
     "sobhaReserve": "شوبا ريسيرڤ",
+    "sobhaElwood": "شوبا الوود",
     "sobhaHartland2Villas": "فلل شوبا هارتلاند 2",
     "sobhaAlSinniyyahIsland": "جزيرة السينية",
     "aradaMassar3": "مسار",
