--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -28,6 +28,7 @@
     "sobhaAlSinniyyahIsland": "Al Sinniyyah Island",
     "sobhaVerde": "Sobha Verde",
     "sobhaReserve": "Sobha Reserve",
+    "sobhaElwood": "Sobha Elwood",
     "aradaMassar3": "Masaar",
     "damacIslands2": "Damac Islands 2",
     "luminaAlta": "Lumena Alta",
