--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -27,13 +27,17 @@
     "sobhaHartland2Villas": "Sobha Hartland Villas",
     "sobhaAlSinniyyahIsland": "Al Sinniyyah Island",
     "sobhaVerde": "Sobha Verde",
+    "sobhaSolis": "Sobha Solis",
+    "sobhaOne": "Sobha One",
     "sobhaReserve": "Sobha Reserve",
     "sobhaElwood": "Sobha Elwood",
+    "sobhaTheElement": "Sobha The Element",
     "aradaMassar3": "Masaar",
     "damacIslands2": "Damac Islands 2",
     "luminaAlta": "Lumena Alta",
     "aziziRivieraRetails": "Riviera Retails",
-    "sobhaSeaHavenPenthouse": "Sobha SeaHaven Penthouse"
+    "sobhaSeaHavenPenthouse": "Sobha SeaHaven Penthouse",
+    "sobhaTheS": "Sobha The S"
   },
   "nav": {
     "about": "ABOUT",
